--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -15,14 +15,14 @@
     font-size: 60px;
 }
 .divbutton{
-    margin-left: 26%;
+    margin-left: 24.5%;
 }
 
 .skillbut{
     border-radius: 40px;
-    width: 191px;
+    width: 17.5%;
     height: 192px;
-    margin-left: 40px;
+    margin-left: 5%;
     border: none;
     background-color: white;
     font-size: 60px;
