--- a/src/components/hello/hello.module.css
+++ b/src/components/hello/hello.module.css
@@ -8,7 +8,7 @@
 }
 .main {
     width: 65%;
-    margin-left: 300px;
+    margin-left: 20%;
     height: 600px;
 }
 .hello{
@@ -18,22 +18,22 @@
 
 .name {
     font-size: 200px;
-    margin-left: 20px;
+    margin-left: 1%;
     font-family: 'Inter', sans-serif;
 }
 .lname {
     font-size: 200px;
-    margin-left: 400px;
+    margin-left: 40%;
     font-family: 'Inter', sans-serif;
 }
 
 .underline {
     border-bottom: 5px solid #6C6C6C; 
-    width: 980px; 
+    width: 99%; 
     margin-top: 75px;
   }
 .position{
     font-size: 70px;
-    margin-left: 75px;
+    margin-left: 7%;
     font-family: 'NunitoSans';
 }
