--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -7,8 +7,9 @@
     justify-content: right;
 }
 .menu {
-    margin-right: 70px;
+    margin-right: 5%;
     display: flex;
+    width: 25%;
 }
 a {
     font-size: 20px;
@@ -20,5 +21,5 @@ a:hover {
   }
 li {
     list-style-type: none;
-    margin-left: 30px;
+    margin-left: 8%;
 }
