--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -2,7 +2,7 @@
 
 .container{
     width: 100%;
-    height: 800px;
+    height: 500px;
     font-family: 'NunitoSans';
     justify-content: center;
     font-size: 60px;
@@ -12,17 +12,17 @@
     justify-content: center;
 }
 .pskill{
-    margin-left: 44%;
+    margin-left: 46%;
 }
 
 
 .underline {
     border-bottom: 5px solid #6C6C6C; 
-    width: 1300px; 
+    width: 86%; 
     margin-top: 1%;
     margin-left: 7%;
   }
 .skillsimg{
-    margin-left: 30%;
+    margin-left: 31.5%;
     margin-top: 100px;
 }
