--- a/src/components/workex/workex.module.css
+++ b/src/components/workex/workex.module.css
@@ -17,13 +17,17 @@
 
 .underline {
     border-bottom: 5px solid #6C6C6C; 
-    width: 1300px; 
-    margin-left: 120px;
+    width: 85%; 
+    margin-left: 7.5%;
     margin-top: 1%;
   }
   .workex{
-    width: 800px;
+    width: 60%;
     margin-left: 25%;
+  }
+
+  .divpex1{
+    width: 100%;
   }
 
   .pex1_1{
@@ -66,7 +70,7 @@
     margin-top: 250px;
     margin-left: 26%;
     border-radius: 40px;
-    width: 750px;
+    width: 50%;
     height: 100px;
     background-color: white;
     font-size: 60px;
