--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -5,7 +5,7 @@
     border-top-left-radius: 96px;
     border-top-right-radius: 96px;
     width: 100%;
-    height: 608px;
+    height: 500px;
     position: absolute;
   }
 .pcontact{
@@ -35,22 +35,28 @@
     color: white;
   }
 
-
-
-
-
-
-
-
-
-
+  .copyIcon:hover {
+    color: #78AAF5; 
+    transition: background-color 1s ease, border-color 1s ease, color 1s ease;
+  }
 
 .divcontact{
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     margin-left: 7%;
-    margin-top: 100px;
+    margin-top: 50px;
 }
+
+.copyIcon {
+    margin-left: 1%;
+    color: white;
+    cursor: pointer;
+    margin-top: 2px;
+    position: absolute;
+  }
+  p{
+    margin-top: 10px;
+  }
 
 
 
