--- a/src/components/aboutme/aboutme.module.css
+++ b/src/components/aboutme/aboutme.module.css
@@ -40,7 +40,7 @@
 .presume {
     font-size: 40px;
     margin-left: 45%;
-    margin-top: 0px;
+    margin-top: 5%;
 }
 .divresume {
     margin-left: 65%;
