--- a/src/components/hello/hello.module.css
+++ b/src/components/hello/hello.module.css
@@ -5,6 +5,7 @@
     height: 770px;
     justify-content: center;
     align-items: center;
+    margin-top: 6%
 }
 .main {
     width: 65%;
@@ -18,7 +19,7 @@
 
 .name {
     font-size: 200px;
-    margin-left: 1%;
+    margin-left: 1rem;
     font-family: 'Inter', sans-serif;
 }
 .lname {
@@ -30,10 +31,71 @@
 .underline {
     border-bottom: 5px solid #6C6C6C; 
     width: 99%; 
-    margin-top: 75px;
+    margin-top: 2rem;
   }
 .position{
     font-size: 70px;
     margin-left: 7%;
     font-family: 'NunitoSans';
 }
+
+@media screen and (max-width: 1200px) {
+    .hello {
+      font-size: 60px;
+    }
+    
+    .name, .lname {
+      font-size: 150px;
+    }
+    
+    .position {
+      font-size: 50px;
+    }
+  }
+  
+  @media screen and (max-width: 992px) {
+    .hello {
+      font-size: 40px;
+    }
+    
+    .name, .lname {
+      font-size: 120px;
+    }
+    
+    .position {
+      font-size: 40px;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .main {
+      width: 80%;
+      margin-left: 10%;
+    }
+    
+    .hello {
+      font-size: 30px;
+    }
+    
+    .name, .lname {
+      font-size: 80px;
+    }
+    
+    .position {
+      font-size: 30px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .hello {
+      font-size: 20px;
+    }
+    
+    .name, .lname {
+      font-size: 60px;
+    }
+    
+    .position {
+      font-size: 20px;
+    }
+  }
