--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,25 +1,69 @@
 @import './font.css';
-.navbar{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: right;
+
+.navbar {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
 }
+
+.navbar.hidden {
+  top: -100px;
+}
+
 .menu {
-    margin-right: 5%;
-    display: flex;
-    width: 25%;
+  margin-right: 3%;
+  display: flex;
+  width: 30%;
 }
+
 a {
-    font-size: 20px;
-    text-decoration: none;
-    color: black;
-    font-family: 'NunitoSans';}
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: black;
+  font-family: 'NunitoSans';
+}
+
 a:hover {
-    color: #6C6C6C; 
-  }
+  color: #6C6C6C;
+}
+
 li {
-    list-style-type: none;
-    margin-left: 8%;
+  list-style-type: none;
+  margin-left: 5%;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    height: 80px;
+  }
+
+  .menu {
+    width: 50%;
+  }
+
+  a {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar {
+    height: 60px;
+  }
+
+  .menu {
+    width: 70%;
+  }
+
+  a {
+    font-size: 14px;
+  }
 }
