--- a/src/components/workex/workex.module.css
+++ b/src/components/workex/workex.module.css
@@ -37,7 +37,7 @@
   }
   
   .p_workex:hover {
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* เพิ่มเงาให้กับตัวอักษร */
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   }
 
 
@@ -60,6 +60,73 @@
     background: #D0E3FF;
     border: 1px solid #D0E3FF;
     color: #ffff;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .htopic {
+      font-size: 40px;
+      margin-left: 25%;
+    }
+  
+    .p_workex {
+      font-size: 18px;
+    }
+  
+    .portbut {
+      font-size: 50px;
+      height: 80px;
+    }
+  }
+  
+  @media screen and (max-width: 992px) {
+    .workex {
+      width: 80%;
+      margin-left: 10%;
+    }
+  
+    .divpex1 {
+      width: 100%;
+      margin-left: 0;
+    }
+  
+    .portbut {
+      margin-left: 20%;
+      width: 60%;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .htopic {
+      font-size: 30px;
+      margin-left: 20%;
+    }
+  
+    .p_workex {
+      font-size: 16px;
+    }
+  
+    .portbut {
+      font-size: 40px;
+      height: 60px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .htopic {
+      font-size: 24px;
+      margin-left: 10%;
+    }
+  
+    .p_workex {
+      font-size: 14px;
+    }
+  
+    .portbut {
+      font-size: 30px;
+      height: 50px;
+      margin-left: 10%;
+      width: 80%;
+    }
   }
 
 
