--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -5,7 +5,7 @@
   height: 100px;
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   position: fixed;
   top: 0;
   left: 0;
@@ -19,13 +19,13 @@
 }
 
 .menu {
-  margin-right: 3%;
+  margin-left: 3%;
   display: flex;
-  width: 30%;
+  width: 35%;
 }
 
 a {
-  font-size: 20px;
+  font-size: 1.2rem;
   text-decoration: none;
   color: black;
   font-family: 'NunitoSans';
@@ -37,6 +37,22 @@ a:hover {
 
 li {
   list-style-type: none;
-  margin-left: 8%;
+  margin-right: 5%;
 }
 
+
+
+@media screen and (max-width: 480px) {
+  .navbar {
+    width: 70%;
+    height: 60px;
+  }
+  
+  .menu {
+    width:125%;
+  }
+  
+  a {
+    font-size: 5px;
+  }
+}
