--- a/src/components/hello/hello.module.css
+++ b/src/components/hello/hello.module.css
@@ -1,42 +1,66 @@
 @import './font.css';
 
 .container {
-    width: 100%;
-    height: 770px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 6%
+  width: 100%;
+  height: 770px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6%;
 }
+
 .main {
-    width: 65%;
-    margin-left: 20%;
-    height: 600px;
+  width: 65%;
+  margin-left: 20%;
+  height: 600px;
 }
-.hello{
-    font-size: 80px;
-    font-family: 'NunitoSans';
+
+.hello {
+  font-size: 80px;
+  font-family: 'NunitoSans';
 }
 
 .name {
-    font-size: 200px;
-    margin-left: 1%;
-    font-family: 'Inter', sans-serif;
+  font-size: 200px;
+  margin-left: 1rem;
+  font-family: 'Inter', sans-serif;
 }
+
 .lname {
-    font-size: 200px;
-    margin-left: 40%;
-    font-family: 'Inter', sans-serif;
+  font-size: 200px;
+  margin-left: 40%;
+  font-family: 'Inter', sans-serif;
 }
 
 .underline {
-    border-bottom: 5px solid #6C6C6C; 
-    width: 99%; 
-    margin-top: 60px;
-  }
-.position{
-    font-size: 70px;
-    margin-left: 7%;
-    font-family: 'NunitoSans';
+  border-bottom: 5px solid #6C6C6C;
+  width: 99%;
+  margin-top: 2rem;
+}
+
+.position {
+  font-size: 70px;
+  font-family: 'NunitoSans';
+  text-align: center;
 }
 
 
+@media screen and (max-width: 480px) {
+  .hello {
+    font-size: 20px;
+  }
+  
+  .name,
+  .lname {
+    font-size: 60px;
+  }
+  
+  .position {
+    font-size: 20px;
+  }
+  .container {
+    height: 40%;
+  }
+  .main {
+    height: 30%;
+  }
+}
