--- a/src/pages/portfolio/portfolio.module.css
+++ b/src/pages/portfolio/portfolio.module.css
@@ -1,40 +1,52 @@
 @import './font.css';
 .main{
-  margin-top: 17.5%;
-    height: 1000px;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 }
-.choice{
-    display: flex;
-    margin-top: 10%;
-    margin-left: 16%;
-    scroll-behavior: smooth;
-
+.choice {
+  margin-top: 20%;
+  display: flex;
+  scroll-behavior: smooth;
+  justify-content: center;
+  align-items: center;
 }
-
-.appimg,.webimg{
-    width: 70%;
-    transition: box-shadow 0.3s ease;
-    border-radius: 30px;
-}
-.webimg{
-    margin-left: 20%;
+.selectchoice{
+  max-width: 25%;
+  padding-left: 5%;
 }
 
-.appimg:hover, .webimg:hover {
-    box-shadow: 0 20px 15px rgba(7, 65, 96, 0.4);
+.choice p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: 'NunitoSans';
+}
+
+.appimg,
+.webimg {
+  width: 100%;
+  transition: box-shadow 0.3s ease;
+  border-radius: 30px;
+}
+
+.appimg:hover,
+.webimg:hover {
+  box-shadow: 0 20px 15px rgba(7, 65, 96, 0.4);
+}
+
+
+
+@media screen and (max-width: 480px) {
+  .main {
+    margin-top: 40%;
+    height: 50vh;
   }
 
-  .divp{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-family: 'NunitoSans';
-    margin-top: 7%;
-  }
-
-  .pmargin{
-    margin-left: 38%;
+  .selectchoice{
+    max-width: 50%;
+    padding-left: 5%;
   }
   
+  .choice{
+    margin-top: 50%;
+  }
+}
